--- a/index.html
+++ b/index.html
@@ -29,16 +29,21 @@
                                             <div class="fa-grey mx-2"><i class="fa-solid fa-list "></i></div>
                                             <div class="fa-grey mx-2"><i class="fa-solid fa-circle-question "></i></div>
                                             <div class="fa-grey mx-2"><i class="fa-solid fa-ellipsis-vertical "></i></div>
-                                            <div class="dropdown text-bg-light p-3">
-                                                <button class="btn btn-secondary dropdown-toggle mx-2" type="button" data-bs-toggle="" aria-expanded="false">
-                                                    <i class="fa-solid fa-bell " style="color: #FFD43B;"></i>
-                                                </button>
-                                                <ul class="dropdown-menu">
-                                                  <li><a class="dropdown-item" href="#">Action</a></li>
-                                                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                                                  <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                            <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
+                                                <ul class="navbar-nav">
+                                                  <li class="nav-item dropdown">
+                                                    <button class="btn btn-secondary dropdown-toggle mx-2" type="button" data-bs-toggle="" aria-expanded="false">
+                                                        <i class="fa-solid fa-bell " style="color: #FFD43B;"></i>
+                                                    </button>
+                                                    <ul class="dropdown-menu dropdown-menu-dark">
+                                                      <li><a class="dropdown-item" href="#">Action</a></li>
+                                                      <li><a class="dropdown-item" href="#">Another action</a></li>
+                                                      <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                                    </ul>
+                                                  </li>
                                                 </ul>
                                             </div>
+                                          
                                     </div>
                                 </div>
                             </nav>                            
@@ -74,7 +79,113 @@
                 </div>          
             </div>
         </div>
-        <div id="main"></div>
+        <div id="main">
+            <div class="container-fluid overflow-hidden text-center">
+                <div class="row m-2 gx-5">                    
+                    <div class="col-sm-8  ">
+                      <div class="card" style="width: 18rem;">
+                        <div class="card-header">
+                          Prossime classi
+                        </div>
+                        <ul class="list-group list-group-flush">
+                          <li class="list-group-item">An item</li>
+                          <li class="list-group-item">A second item</li>
+                          <li class="list-group-item">A third item</li>
+                          <li class="list-group-item">An item</li>
+                          <li class="list-group-item">A second item</li>
+                          <li class="list-group-item">A third item</li>
+                          <li class="list-group-item">A third item</li>
+                        </ul>
+                      </div>
+                    </div>
+                    <div class="col-sm-4 text-start ">
+                      <div class="card" style="width: 18rem;">
+                        <div class="card-header">
+                          Todo
+                        </div>
+                        <ul class="list-group">
+                          <li class="list-group-item">
+                            <input class="form-check-input me-1" type="checkbox" value="" id="firstCheckbox">
+                            <label class="form-check-label" for="firstCheckbox">First checkbox</label>
+                          </li>
+                          <li class="list-group-item">
+                            <input class="form-check-input me-1" type="checkbox" value="" id="secondCheckbox">
+                            <label class="form-check-label" for="secondCheckbox">Second checkbox</label>
+                          </li>
+                          <li class="list-group-item">
+                            <input class="form-check-input me-1" type="checkbox" value="" id="thirdCheckbox">
+                            <label class="form-check-label" for="thirdCheckbox">Third checkbox</label>
+                          </li>
+                        </ul>
+                      </div>
+                    </div>               
+                </div>
+                <div class="row m-2 gx-5">                    
+                    <div class="col-sm-8  ">
+                        <div class="accordion" id="accordionExample">
+                            <div class="accordion-item">
+                              <h2 class="accordion-header text-start mx-3">
+                                F.A.Q
+                              </h2>
+                            </div>
+                            <div class="accordion-item">
+                                <h2 class="accordion-header">
+                                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseTwo">
+                                    Accordion Item #1
+                                  </button>
+                                </h2>
+                                <div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                                  <div class="accordion-body">
+                                    <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                                  </div>
+                                </div>
+                              </div>
+                            <div class="accordion-item">
+                              <h2 class="accordion-header">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                  Accordion Item #2
+                                </button>
+                              </h2>
+                              <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                  <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                                </div>
+                              </div>
+                            </div>
+                            <div class="accordion-item">
+                              <h2 class="accordion-header">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                  Accordion Item #3
+                                </button>
+                              </h2>
+                              <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                                <div class="accordion-body">
+                                  <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                    </div>
+                    <div class="col-sm-4 text-start ">
+                        <div class="card" style="width: 18rem;">
+                            <img src="./img/stats.jpeg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                              <h5 class="card-title">Utenti attivi</h5>
+                              <p class="card-text">Lista degli utenti attivi negli ultimi mesi.</p>
+                            </div>
+                            <ul class="list-group list-group-flush">
+                              <li class="list-group-item">Gennaio: 1200</li>
+                              <li class="list-group-item">Febbraio: 800</li>
+                              <li class="list-group-item">Marzo: 1500</li>
+                            </ul>
+                            <div class="card-body">
+                              <a href="#" class="card-link">Visualizza report aprofondito</a>
+                            </div>
+                        </div>
+                    </div>               
+                </div>
+            </div>
+        </div>
     </div>
 
 
